--- a/index.html
+++ b/index.html
@@ -344,12 +344,13 @@
           <!--Form-footer-->
             <form name="signup_form" autocomplete="on" novalidate class="form-footer">
               <h4 class="form-title">Підпишіться на розсилку</h4>
+              <div class="form-conteiner">
               <label class="label-footer"> 
                 <input type="email" name="email" autofocus placeholder="E-mail" required class="form-in"/>
               </label>
               <button type="submit" class="form-button">Підписатися<svg class="icon-form"><use href="./images/symbol-defs-three.svg#icon-icon-send"></use></svg></button>
+            </div>
             </form>
-        
           </div>
       </div>
     </footer>
