--- a/portfolio.html
+++ b/portfolio.html
@@ -257,6 +257,18 @@
                 </svg></a></li>
           </ul>
         </div>
+            <!--Form-footer-->
+              <form name="signup_form" autocomplete="on" validate class="form-footer">
+                    <h4 class="form-title">Підпишіться на розсилку</h4>
+                <div class="form-conteiner">
+                        <label class="label-footer">
+                      <input type="email" name="email" autofocus placeholder="E-mail" required class="form-in" />
+                      </label>
+                  <button type="submit" class="form-button">Підписатися<svg class="icon-form">
+                    <use href="./images/symbol-defs-three.svg#icon-icon-send"></use>
+                  </svg></button>
+                </div>
+              </form>
       </div>
     </div>
   </footer>
