Add the form for model-window

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,13 +19,13 @@
           <a href="./index.html" class="logo"><span class="logo-title">Web</span>Studio</a>
           <ul class="site-nav list">
             <li class="nav-item nav-item-studio"> 
-              <a href="./index.html" class="link link-active nav-link">Студия</a>
+              <a href="./index.html" class="link link-active nav-link">Студія</a>
             </li>
             <li class="nav-item">
-              <a href="./portfolio.html" class="link nav-link">Портфолио</a>
+              <a href="./portfolio.html" class="link nav-link">Портфоліо</a>
             </li>
             <li class="nav-item">
-              <a href="" class="link nav-link">Контакты</a>
+              <a href="" class="link nav-link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -50,8 +50,8 @@
       <section class="section-hero">
         <div class="overlay">
         <div class="conteiner-primary conteiner hero-conteiner">
-           <h1 class="section-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="button-order" type="button" data-modal-open>Заказать услугу</button>  
+           <h1 class="section-title">Ефективні рішення для вашого бізнесу</h1>
+            <button class="button-order" type="button" data-modal-open>Замовити послугу</button>  
        </div> 
       </div>
       </section>
@@ -63,38 +63,34 @@
         <ul class="list list-feature">
           <li class="feature-item">
             <div class="antena-around"> <svg class="antena"> <use href="./images/symbol-defs.svg#icon-antenna"> </use> </svg> </div>
-            <h3 class="features-title">Внимание к деталям</h3>
+            <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="section-content">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиці
             </p>
              </li>
           <li class="feature-item">
             <div class="antena-around"> <svg class="antena">
                 <use href="./images/symbol-defs.svg#icon-clock"> </use>
               </svg> </div>
-            <h3 class="features-title">Пунктуальность</h3>
+            <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="section-content">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе..
             </p>
           </li>
           <li class="feature-item"><div class="antena-around"> <svg class="antena">
               <use href="./images/symbol-defs.svg#icon-diagram"> </use>
             </svg> </div>
-            <h3 class="features-title">Планирование</h3>
+            <h3 class="features-title">ПЛАНУВАННЯ</h3>
             <p class="section-content">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
+              Так само консультація з широким активом значною мірою зумовлює..
             </p>
           </li>
           <li class="feature-item"><div class="antena-around"> <svg class="antena">
               <use href="./images/symbol-defs.svg#icon-astronaut"> </use>
             </svg> </div>
-            <h3 class="features-title">Современные технологии</h3>
+            <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="section-content">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
           </li>
         </ul>
@@ -103,7 +99,7 @@
       <!--What we Do-->
       <section class="section-work">
         <div class="conteiner-primary">
-        <h2 class="work-title">Чем мы занимаемся</h2>
+        <h2 class="work-title">Чим ми займаємося</h2>
         <ul class="list list-work">
           <li class="work-item">
            <div class="thumb">
@@ -114,7 +110,7 @@
               width="370"
               height="294"
             /> 
-            <p class="divice">Десктопные приложения</p>
+            <p class="divice">Десктопні додатки</p>
           </div>
           </li>
           <li class="work-item">
@@ -126,7 +122,7 @@
               width="370"
               height="294"
             />
-            <p class="divice">Мобильные приложения</p>
+            <p class="divice">Мобільні додатки</p>
             </div>
           </li>
           <li class="work-item">
@@ -138,7 +134,7 @@
               width="370"
               height="294"
             />
-            <p class="divice">Дизайнерские решения</p>
+            <p class="divice">Дизайнерські рішення</p>
           </div>
           </li>
         </ul>
@@ -273,7 +269,7 @@
 
       <!--Regular clients-->
       <section class="section-clients">
-        <h2 class="clients-title">Постоянные клиенты</h2>
+        <h2 class="clients-title">Постійні клієнти</h2>
         <div class="clients conteiner-primary">
           <ul class="our-clients">
             <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
@@ -313,7 +309,7 @@
               href="https://goo.gl/maps/gsfCshEHXstuSvvL9"
               target="_blank"
               rel="noopener noreferrer"
-              class="footer-post">г. Киев, пр-т Леси Украинки, 26</a>
+              class="footer-post">м. Київ, пр-т Лесі Українки, 26</a>
           </li>
           <li class="list-footer">
             <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a>
@@ -325,7 +321,7 @@
         </address>
         </div>
         <div class="social conteiner-social">
-          <h4 class="footer-social">Присоединяйтесь</h4>
+          <h4 class="footer-social">Приєднуйтесь</h4>
           <ul class="social-list">
             <li class="social-item"><a href="" class="social-link social-footer"><svg class="social-icon footer-icon">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
@@ -342,11 +338,11 @@
           </ul>
           </div>
           <!--Form-footer-->
-            <form name="signup_form" autocomplete="on" novalidate class="form-footer">
+            <form name="signup_form" autocomplete="on" validate class="form-footer">
               <h4 class="form-title">Підпишіться на розсилку</h4>
               <div class="form-conteiner">
               <label class="label-footer"> 
-                <input type="email" name="email" autofocus placeholder="E-mail" required class="form-in"/>
+                <input type="email" name="email" placeholder="E-mail" required class="form-in"/>
               </label>
               <button type="submit" class="form-button">Підписатися<svg class="icon-form"><use href="./images/symbol-defs-three.svg#icon-icon-send"></use></svg></button>
             </div>
@@ -354,12 +350,41 @@
           </div>
       </div>
     </footer>
-    <!--Modal - window-->
+    <!--Modal-window-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal" data-modal-close>
          <svg  class="modal-close" >
-            <use href="./images/symbol-defs-close.svg#icon-close"></use>
+            <use href="./images/symbol-defs-two.svg#icon-close"></use>
           </svg>
+
+          <!--Form-modal-window--->
+          <form name="signup_form" autocomplete="on" validate class="form-modal">
+            <h4 class="form-md-title">Залиште свої дані, ми вам передзвонимо</h4>
+            <div class="form-md-label">
+            <label>
+              Ім'я
+              <input type="text" name="username" autofocus placeholder="Катерина Терещенко"/> 
+            </label>
+            <label>
+              Телефон
+              <input type="tel" name="telefone" placeholder="+380675721658"/>
+            </label>
+            <label>
+              Пошта
+              <input type="email" name="mail" placeholder="my@gmail.com"/>
+            </label>
+            <label>
+              Коментар
+              <textarea name="feedback" rows="8" placeholder="Введіть текст"></textarea>
+            </label>
+            </div>
+            <div>
+            <input type="checkbox" name="checkbox" id="confidence"/>
+            <label>Погоджуюся з розсилкою та приймаю <a href=""><span>Умови договору</span></a></label>
+            </div>
+            <button type="submit" class="form-btn">Відправити</button>
+          
+          </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
