--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
 
 <head>
   <meta charset="UTF-8" />
@@ -21,13 +21,13 @@
         <a href="./index.html" class="logo"><span class="logo-title">Web</span>Studio</a>
         <ul class="site-nav list">
           <li class="nav-item">
-            <a href="./index.html" class="link nav-link">Студия</a>
+            <a href="./index.html" class="link nav-link">Студія</a>
           </li>
           <li class="nav-item nav-item-portfolio">
-            <a href="./portfolio.html" class="link link-active nav-link">Портфолио</a>
+            <a href="./portfolio.html" class="link link-active nav-link">Портфоліо</a>
           </li>
           <li class="nav-item">
-            <a href="" class="link nav-link">Контакты</a>
+            <a href="" class="link nav-link">Контакти</a>
           </li>
         </ul>
       </nav>
@@ -56,10 +56,10 @@
             <button class="button" type="button">Все</button>
           </li>
           <li class="button-item">
-            <button class="button" type="button">Веб-сайты</button>
+            <button class="button" type="button">Веб-сайти</button>
           </li>
           <li class="button-item">
-            <button class="button" type="button">Приложения</button>
+            <button class="button" type="button">Додатки</button>
           </li>
           <li class="button-item">
             <button class="button" type="button">Дизайн</button>
@@ -113,7 +113,7 @@
               </div>
               <div class="card-exampl">
                 <h2 class="exampl-title">Ресторан Seafood</h2>
-                <p class="exampl-content">Приложение</p>
+                <p class="exampl-content">Додаток</p>
               </div>
             </a>
           </li>
@@ -128,7 +128,7 @@
               </div>
               </div>
               <div class="card-exampl">
-                <h2 class="exampl-title">Проект Prime</h2>
+                <h2 class="exampl-title">Проєкт Prime</h2>
                 <p class="exampl-content">Маркетинг</p>
               </div>
             </a>
@@ -144,8 +144,8 @@
               </div>
               </div>
               <div class="card-exampl">
-                <h2 class="exampl-title">Проект Boxes</h2>
-                <p class="exampl-content">Приложение</p>
+                <h2 class="exampl-title">Проєкт Boxes</h2>
+                <p class="exampl-content">Додаток</p>
               </div>
             </a>
           </li>
@@ -176,7 +176,7 @@
               </div>
               </div>
               <div class="card-exampl">
-                <h2 class="exampl-title">Издание Limited Edition</h2>
+                <h2 class="exampl-title">Видання Limited Edition</h2>
                 <p class="exampl-content">Дизайн</p>
               </div>
             </a>
@@ -192,7 +192,7 @@
               </div>
               </div>
               <div class="card-exampl">
-                <h2 class="exampl-title">Проект LAB</h2>
+                <h2 class="exampl-title">Проєкт LAB</h2>
                 <p class="exampl-content">Маркетинг</p>
               </div>
             </a>
@@ -210,7 +210,7 @@
               </div>
                 <div class="card-exampl">
                 <h2 class="exampl-title">Growing Business</h2>
-                <p class="exampl-content">Приложение</p>
+                <p class="exampl-content">Додаток</p>
               </div>
             </a>
           </li>
@@ -229,7 +229,7 @@
             <ul class="list footer-item">
               <li class="list-footer">
                 <a href="https://goo.gl/maps/gsfCshEHXstuSvvL9" target="_blank" rel="noopener noreferrer"
-                  class="footer-post">г. Киев, пр-т Леси Украинки, 26</a>
+                  class="footer-post">м. Київ, пр-т Лесі Українки, 26</a>
               </li>
               <li class="list-footer">
                 <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a>
@@ -241,7 +241,7 @@
           </address>
         </div>
         <div class="social conteiner-social">
-          <h4 class="footer-social">Присоединяйтесь</h4>
+          <h4 class="footer-social">Приєднуйтесь</h4>
           <ul class="social-list">
             <li class="social-item"><a href="" class="social-link social-footer"><svg class="social-icon footer-icon">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
@@ -262,7 +262,7 @@
                     <h4 class="form-title">Підпишіться на розсилку</h4>
                 <div class="form-conteiner">
                         <label class="label-footer">
-                      <input type="email" name="email" autofocus placeholder="E-mail" required class="form-in" />
+                      <input type="email" name="email" placeholder="E-mail" required class="form-in" />
                       </label>
                   <button type="submit" class="form-button">Підписатися<svg class="icon-form">
                     <use href="./images/symbol-defs-three.svg#icon-icon-send"></use>
