--- a/portfolio.html
+++ b/portfolio.html
@@ -258,7 +258,7 @@
           </ul>
         </div>
             <!--Form-footer-->
-              <form name="signup_form" autocomplete="on" validate class="form-footer">
+              <form name="signup_form" autocomplete="on" class="form-footer">
                     <h4 class="form-title">Підпишіться на розсилку</h4>
                 <div class="form-conteiner">
                         <label class="label-footer">
