--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
 
 <body>
   <!--Header-->
-  <header class="header-portfolio">
-    <div class="conteiner-primary conteiner-portfolio flex-conteiner">
+  <header class="header">
+    <div class="conteiner-primary flex-conteiner">
       <nav class="page-header">
         <a href="./index.html" class="logo"><span class="logo-title">Web</span>Studio</a>
         <ul class="site-nav list">
@@ -35,12 +35,12 @@
       <ul class="item-contact list">
         <li class="contact-item">
           <a href="mailto:info@devstudio.com" class="link contact-link"><svg class="envelope">
-              <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com</a>
         </li>
         <li class="contact-item"><a href="tel:+380961111111" class="link contact-link"><svg class="envelope">
-              <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
             +38 096 111 11 11</a></li>
       </ul>
@@ -48,7 +48,7 @@
   </header>
   <!--Main-->
   <main>
-    <!--<h1 class="portfolio-title">Portfolio</h1>-->
+    <h1 class="visually-hidden">Portfolio</h1>
     <section class="button-section">
       <div class="portfolio">
         <ul class="list button-list">
@@ -221,9 +221,8 @@
 
   <!--Footer-->
   <footer class="footer">
-    <div class="conteiner-primary">
-      <div class="footer-flex">
-        <div class="our-flex">
+    <div class="conteiner-primary footer-flex">
+        <div>
           <a href="./index.html" class="logo-botton"><span class="logo-title">Web</span>Studio</a>
           <address>
             <ul class="list footer-item">
@@ -244,16 +243,16 @@
           <h4 class="footer-social">Приєднуйтесь</h4>
           <ul class="social-list">
             <li class="social-item"><a href="" class="social-link social-footer"><svg class="social-icon footer-icon">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a></li>
             <li class="social-item"><a href="" class="social-link social-footer"><svg class="social-icon footer-icon">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
             <li class="social-item"><a href="" class="social-link social-footer"><svg class="social-icon footer-icon">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
             <li class="social-item"><a href="" class="social-link social-footer"><svg class="social-icon footer-icon">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
           </ul>
         </div>
@@ -265,12 +264,11 @@
                       <input type="email" name="email" placeholder="E-mail" required class="form-in" />
                       </label>
                   <button type="submit" class="form-button">Підписатися<svg class="icon-form">
-                    <use href="./images/symbol-defs-three.svg#icon-icon-send"></use>
+                    <use href="./images/icons.svg#icon-icon-send"></use>
                   </svg></button>
                 </div>
               </form>
       </div>
-    </div>
   </footer>
 </body>
 
