--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
 
 <head>
   <meta charset="UTF-8" />
@@ -240,7 +240,7 @@
           </address>
         </div>
         <div class="social conteiner-social">
-          <h4 class="footer-social">Приєднуйтесь</h4>
+          <h2 class="footer-social">Приєднуйтесь</h2>
           <ul class="social-list">
             <li class="social-item"><a href="" class="social-link social-footer"><svg class="social-icon footer-icon">
                   <use href="./images/icons.svg#icon-instagram"></use>
@@ -258,12 +258,12 @@
         </div>
             <!--Form-footer-->
               <form name="signup_form" autocomplete="on" class="form-footer">
-                    <h4 class="form-title">Підпишіться на розсилку</h4>
-                <div class="form-conteiner">
+                <h2 class="form-title">Підпишіться на розсилку</h2>
+                   <div class="form-conteiner">
                         <label class="label-footer">
                       <input type="email" name="email" placeholder="E-mail" required class="form-in" />
                       </label>
-                  <button type="submit" class="form-button">Підписатися<svg class="icon-form">
+                      <button type="submit" class="form-button">Підписатися<svg class="icon-form">
                     <use href="./images/icons.svg#icon-icon-send"></use>
                   </svg></button>
                 </div>
